--- a/ProyectoCECRUD/ProyectoCECRUD.csproj
+++ b/ProyectoCECRUD/ProyectoCECRUD.csproj
@@ -192,6 +192,8 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Contacto\Inicio.cshtml" />
     <Content Include="Views\Contacto\Registrar.cshtml" />
+    <Content Include="Views\Contacto\Editar.cshtml" />
+    <Content Include="Views\Contacto\Eliminar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
